Solved Problem, that big Screen will wrap text

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ nav {
 .centered {
   margin-left: auto;
   margin-right: auto;
-  max-width: 1224px;
+  max-width: 100%;
 }
 
 /* Menu */
